crates/uitest/fixtures/name_resolution/ambiguous_assoc_type_real.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/ambiguous_assoc_type_real.fe
---
error[2-0009]: ambiguous associated type `Item`
   ┌─ ambiguous_assoc_type_real.fe:10:16
   │
 4 │ trait Trait1 { type Item }
   │       ------ candidate: <T as Trait1>::Item = u8
 5 │ trait Trait2 { type Item }
   │       ------ candidate: <T as Trait2>::Item = u16
   ·
10 │     let _y: T::Item = 0
   │                ^^^^ associated type `Item` is ambiguous
   │
   = specify the trait explicitly: `<Type as Trait>::Item`
